Fix main and side content layout problems

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ h1, h2, h3, p {
     height: 100vh;
     width: 100%;
     display: grid;
-    grid-template-rows: 1fr 5fr;
+    grid-template-rows: 120px 1fr;
     grid-template-columns: 1fr 4fr;
 }
 
@@ -30,7 +30,7 @@ h1, h2, h3, p {
 }
 
 #sidebar {
-    height: 100vh;
+    height: 100%;
     grid-row: 1 / -1;
     grid-column: 1;
     border: 1px solid black;
@@ -139,25 +139,34 @@ h1, h2, h3, p {
 #projects, #announcements, #trending {  /* Use the same structure title-content */
     display: grid;
     grid-template-rows: 2rem 1fr;
-
+    grid-template-columns: 1fr;
+}
+#projects {
+    height: 100%;
+    border: 1px solid black;
 }
 .title-sect {
     grid-area: 1 / 1;
 }
 .publi-sect {
+    height: 100%;
     grid-area: 2 / 1;
 
     display: grid;
-    grid-template-rows: 200px;
+    grid-template-rows: minmax(100px, 200px);
     grid-template-columns: 1fr 1fr;
-    grid-auto-rows: 200px;
+    grid-auto-rows: minmax(100px, 200px);
     gap: 15px;
+
+    overflow-y: auto;
 }
 .publi {
     border: 1px solid black;
     border-radius: 8px;
 
     display: grid;
+
+    overflow-y: auto;
 }
 .icon-container {
     align-self: end;
@@ -171,6 +180,8 @@ h1, h2, h3, p {
     display: grid;
     grid-template-rows: 1fr 1fr;
     grid-template-columns: 1fr;
+
+    border: 1px solid black;
 }
 .announ-container, .trend-container {
     height: calc(100% - 4rem);
@@ -181,6 +192,10 @@ h1, h2, h3, p {
     grid-template-rows: 1fr;
     grid-template-columns: 1fr;
     grid-auto-rows: 1fr;
+    overflow-y: auto;
+}
+.announ-block, .trend-block {
+    height: 100px;
     overflow-y: auto;
 }
 
